--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dr. Casey P. Deen</title>
+		<title>Dr. Casey P. Deen -- Contact</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -21,7 +21,7 @@
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 	</head>
-	<body class="homepage">
+	<body>
 
 	<!-- Header -->
 		<div id="header">
@@ -29,8 +29,8 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="experience.html">Experience</a></li>
+						<li><a href="index.html">Homepage</a></li>
+						<li class="active"><a href="experience.html">Experience</a></li>
 						<li><a href="techskills.html">Technical Skills</a></li>
 						<li><a href="references.html">References</a></li>
 					</ul>
@@ -45,19 +45,24 @@
 				</div>
 			</div>
 		</div>
-	<!-- Header -->
+	<!-- Header --> 
 
-	<!-- Featured -->
-		<div id="featured">
-			<div class="container">
-				<header>
-					<h2>Profile</h2>
-				</header>
-				<p>I am an infrared astronomer with 11 years of experience measuring, calculating, and controlling the behavior of photons and extracting information about the conditions of their 
-				creation, transit, and detection.  I am currently looking to continue my passion for optics, metrology, and programming.</p>
-				<hr />
+	<!-- Main -->
+		<div id="main">
+			<div id="content" class="container">
+				<section>
+					<header>
+						<h2>Experience and Education</h2>
+						<span class="byline">Postdoctoral and Professional</span>
+					</header>
+					<p>Max Planck Institut für extraterrestrische Physik, Garching bei München</p>
+					<p>Max Planck Institut für Astronomie, Heidelberg </p>
+					<p>University of Texas at Austin</p>							
+
+				</section>
 			</div>
 		</div>
+	<!-- /Main -->
 
 
 	<!-- Copyright -->
@@ -66,6 +71,7 @@
 				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
 			</div>
 		</div>
+
 
 	</body>
 </html>
