--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />			
+			<link rel="stylesheet" href="css/style-mobile.css" />
 		</noscript>
 	</head>
 	<body class="homepage">
