added new files

--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dr. Casey P. Deen -- Contact</title>
+		<title>Dr. Casey P. Deen -- Experience</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,6 +32,7 @@
 						<li><a href="index.html">Homepage</a></li>
 						<li class="active"><a href="experience.html">Experience</a></li>
 						<li><a href="techskills.html">Technical Skills</a></li>
+						<li><a href="examples.html">Projects</a></li>
 						<li><a href="references.html">References</a></li>
 					</ul>
 				</nav>
@@ -55,13 +56,50 @@
 						<h2>Experience and Education</h2>
 						<span class="byline">Postdoctoral and Professional</span>
 					</header>
-					<p>Max Planck Institut für extraterrestrische Physik, Garching bei München</p>
-					<p>Max Planck Institut für Astronomie, Heidelberg </p>
-					<p>University of Texas at Austin</p>							
+					<p>My 11 year career in the study of the production, control, and analysis of photons, I obtained a bachelors of science degree in Physics, 
+					and a doctorate in Astronomy.  My career</p>							
 
 				</section>
-			</div>
-		</div>
+			   <div class="row">
+					<section class="12u">
+						<header>
+							<h2><a href="http://www.mpe.mpg.de/">MPI für extraterrestrische Physik</a>, Garching bei München</h2>
+							<span class="byline">Postdoctoral Researcher (Aug 2016 - Present)</span>
+						</header>
+						<p>Adaptive Optics (AO) specialist.  Responsible for ensuring Adaptive Optics performance during operation with GRAVITY Interferometer, and diagnosing/solving performance problems.  Embedded Strehl ratio measurement routine in GRAVITY reduction pipeline.</p>
+					</section>
+				</div>
+				<div class="row">				
+					<section class="12u">
+						<header>
+							<h2><a href="http://www.mpia.de/">MPI for Astronomie</a>, Heidelberg</h2>
+							<span class="byline">Postdoctoral Researcher (Nov 2011 - Jul 2016)</span>
+						</header>
+						<p>MAIT Engineer for Coudé Infrared Adaptive Optics (CIAO).  Aided construction and of optical test bench.  Tested optical, mechanical, and electrical components of the AO system prior to integration.  Tuned AO system to optimize correction bandwidth under various observing conditions. Developed instrument software to standards defined by the European Southern Observatory (ESO), developed data reduction pipeline for use in alignment, commissioning, and health-verification of CIAO instrument at Telescope</p>
+					</section>				
+				</div>
+
+				<div class="row">
+					<section class="12u">
+						<header>
+							<h2><a href="http://www.astro.as.utexas.edu">Univ. of Texas, Dept. of Astronomy</a></h2>
+							<span class="byline">Ph.D. in Astronomy (Aug 2005 - Nov 2011)</span>
+						</header>
+						<p>Thesis topic: “The Relationship between Disk and Stellar Properties of Young Stellar Objects”. Responsible for metrology (transmission, AR coating, cryogenic robustness, blaze function, PSF) of silicon diffractive optics (grisms, immersion gratings) produced by Dr. Jaffe’s group.  Involved in the development and improvement of next-generation lithographic UV exposure system for the production of larger and better grisms and immersion gratings for future astronomical instruments.</p>
+					</section>				
+				</div>
+				<div class="row">
+					<section class="12u">
+						<header>
+							<h2><a href="http://www.tamu.edu">Texas A&M University</a></h2>
+							<span class="byline">B.S. Physics <i>cum laude</i> (Aug 2000 - Dec 2004)</span>
+						</header>
+						<p>I worked in the laboratory of Prof. Dr. Donald Naugle on cryogenic thin films studying superconductivity in condensed matter.  I also worked in the laboratory of magnet fabrication laboratory of Prof. Dr. Peter McIntyre helping to construct magnets for CERN.</p>
+					</section>				
+				</div>
+           </div>
+      </div>			
+			
 	<!-- /Main -->
 
 
