--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<li class="active"><a href="index.html">Homepage</a></li>
 						<li><a href="experience.html">Experience</a></li>
 						<li><a href="techskills.html">Technical Skills</a></li>
+						<li><a href="examples.html">Projects</a></li>
 						<li><a href="references.html">References</a></li>
 					</ul>
 				</nav>
