--- a/references.html
+++ b/references.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dr. Casey P. Deen -- Contact</title>
+		<title>Dr. Casey P. Deen -- References</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,6 +32,7 @@
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="experience.html">Experience</a></li>
 						<li><a href="techskills.html">Technical Skills</a></li>
+						<li><a href="examples.html">Projects</a></li>
 						<li class="active"><a href="references.html">References</a></li>
 					</ul>
 				</nav>
