--- a/techskills.html
+++ b/techskills.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dr. Casey P. Deen -- Contact</title>
+		<title>Dr. Casey P. Deen -- Technical Skills</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,6 +32,7 @@
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="experience.html">Experience</a></li>
 						<li class="active"><a href="techskills.html">Technical Skills</a></li>
+						<li><a href="examples.html">Projects</a></li>
 						<li><a href="references.html">References</a></li>
 					</ul>
 				</nav>
@@ -80,14 +81,17 @@
 						 interfacing with Python (<a href="https://github.com/soylentdeen/MoogPy">MoogPy</a>)</li>
 						</ol>
 					</li>
-					<li><b>Data Science</b>
+					<li><b>Systems Engineering</b>
 						<ol>
-						<li>Proficient in algorithmically sifting through massive quantities of data</li>
+						<li>Experience developing design requirements</li>
+						<li>Experience developing a test suite to check compliance</li>
+						<li>Experience testing system performance to verify compliance</li>
+						<li>Experience coordinating software development with internal and external software developers</li>
 						</ol>
 					</li>
-					<li><b>Data Science</b>
+					<li><b>Interfacing</b>
 						<ol>
-						<li>Proficient in algorithmically sifting through massive quantities of data</li>
+						<li>Labview, RS232, custom python drivers (<a href="https://github.com/soylentdeen/pyGTA">Python Grating Testing Aparatus</a>)</li>
 						</ol>
 					</li>
 					<li><b>Data Science</b>
