close to finished

--- a/examples.html
+++ b/examples.html
@@ -53,11 +53,15 @@
 			<div id="content" class="container">
 				<section>
 					<header>
-						<h2>Previous Projects</h2>
+						<h2>Representative Projects</h2>
 						<span class="byline">Tinkering for fun and profit</span>
 					</header>
-					<p>During the course of my postgraduate education and professional career, I have created many 
-					</p>							
+					<p>During the course of my postgraduate education and professional career, I have written many software programs.  In order to facilitate easy development across 
+					myriad computers, I established an account here on Github.  Here, I highlight three of my most useful software packages.  Most of my development is in python, 
+					because it is the language I am most familiar with.  However, I can work easily in other languages (MATLAB, IDL, C++, FORTRAN77).  The code has been developed with
+					no audience other than myself in mind, hence the sometimes profane commit messages and the lack of explicit documentation, but they provide an insight into my
+					capabilities and problem solving style.
+					</p>
 
 				</section>
 			   <div class="row">
@@ -67,7 +71,10 @@
 							<h2><a href="https://www.github.com/soylentdeen/pyGTA/">pyGTA</a></h2>
 							<span class="byline">python Grating Testing Apparatus</span>
 						</header>
-						<p>During my time in Prof. Dr. Jaffe's lab, I created a </p>
+						<p>During my time in Prof. Dr. Jaffe's lab, I built a grating testing apparatus to test the performance of the grisms and immersion gratings our group was developing.  The
+						apparatus included a <a href="http://spectralproducts.com/dk480.html">DK480 Monochrometer</a>, an <a href="http://www.thinksrs.com/products/SR510530.htm">SRS 510</a> lock-in amplifier, 
+						a PbSe mid-infrared detector, and a motor controller to move the detector and grating to various combinations of incidence and transmission angles.  After designing, procuring, and constructing the
+						apparatus, I wrote pyGTA to control all the various parts of the system and make conducting systematic tests significantly easier.</p>
 					</section>				
 					<section class="6u">
 						<a href="https://www.github.com/soylentdeen/MoogPy" class="image full"><img src="images/Ti.png" alt="MoogPy - Artesanal Zeeman Radiative Transfer"></a>
@@ -75,7 +82,9 @@
 							<h2>MoogPy</h2>
 							<span class="byline">Artesanal Zeeman Radiative Transfer</span>
 						</header>
-						<p>For one half of my dissertation, I </p>
+						<p>For one half of my dissertation, I modified the radiative transfer engine in Moog, a popular stellar spectral synthesis program (written in vintage FORTRAN77), to do polarized radiative transfer.  This modified
+						program allowed the calculation of the emergent spectrum of stars with magnetic fields.  I put a significant amount of effort into improving the user interface.  It is currently used by Dr.
+						Jaffe's group to study the magnetic properties of young stars.</p>
 					</section>				
 				</div>
 
@@ -86,19 +95,29 @@
 							<h2>Graffity</h2>
 							<span class="byline">Tool-kit for Adaptive Optics and infrared interferometry</span>
 						</header>
-						<p>This is a library of </p>
+						<p>This is a library of tools I developed during the AIV and commissioning of the CIAO wavefront sensor.  The code contains a model of the CIAO wavefront sensor, allowing tests of 
+						commissioning strategies and system performance under various observing conditions.</p>
 					</section>				
-<!--					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
-						<header>
-							<h2>Mauris vulputate dolor</h2>
-						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
--->				</div>			
+				</div>			
 			</div>			
 		</div>
 	<!-- /Main -->
+
+	<!-- Footer -->
+		<div id="footer">
+			<div class="container">
+				<section>
+					<header>
+						<h2>Contact</h2>
+						<span class="byline">Please get in touch!</span>
+					</header>
+					<ul class="contact">
+						<li><a href="mailto:cdeen@mpe.mpg.de">cdeen@mpe.mpg.de</a></li>
+					</ul>
+				</section>
+			</div>
+		</div>
+	<!-- /Footer -->
 
 
 	<!-- Copyright -->
