--- a/experience.html
+++ b/experience.html
@@ -56,14 +56,17 @@
 						<h2>Experience and Education</h2>
 						<span class="byline">Postdoctoral and Professional</span>
 					</header>
-					<p>My 11 year career in the study of the production, control, and analysis of photons, I obtained a bachelors of science degree in Physics, 
-					and a doctorate in Astronomy.  My career</p>							
+					<p>My 11 year career in the study of the production, control, and analysis of photons has seen me move from Texas to Bayern.  I obtained a bachelors of science degree in Physics at Texas A&M University in College Station, 
+					and a doctorate in Astronomy at the University of Texas at Austin.  After successfully defending my thesis on star formation and silicon diffractive optics, I took a
+					postdoctoral position at the Max Planck Institut für Astronomie in Heidelberg, working on CIAO, a suite of four infrared adaptive optics instruments to be installed on the European Southern
+					Observatory's (ESO) Very Large Telescope (VLT).  After the delivery and installation of the wave front sensors, I moved from MPIA in Heidelberg to the Max Planck Institut für 
+					extraterrestrische Physik in Garching bei München, where I am now the CIAO responsible for the GRAVITY Interferometer.</p>
 
 				</section>
 			   <div class="row">
 					<section class="12u">
 						<header>
-							<h2><a href="http://www.mpe.mpg.de/">MPI für extraterrestrische Physik</a>, Garching bei München</h2>
+							<h2><a href="http://www.mpe.mpg.de/">MPI für extraterrestrische Physik</a></h2>
 							<span class="byline">Postdoctoral Researcher (Aug 2016 - Present)</span>
 						</header>
 						<p>Adaptive Optics (AO) specialist.  Responsible for ensuring Adaptive Optics performance during operation with GRAVITY Interferometer, and diagnosing/solving performance problems.  Embedded Strehl ratio measurement routine in GRAVITY reduction pipeline.</p>
@@ -72,7 +75,7 @@
 				<div class="row">				
 					<section class="12u">
 						<header>
-							<h2><a href="http://www.mpia.de/">MPI for Astronomie</a>, Heidelberg</h2>
+							<h2><a href="http://www.mpia.de/">MPI for Astronomie</a></h2>
 							<span class="byline">Postdoctoral Researcher (Nov 2011 - Jul 2016)</span>
 						</header>
 						<p>MAIT Engineer for Coudé Infrared Adaptive Optics (CIAO).  Aided construction and of optical test bench.  Tested optical, mechanical, and electrical components of the AO system prior to integration.  Tuned AO system to optimize correction bandwidth under various observing conditions. Developed instrument software to standards defined by the European Southern Observatory (ESO), developed data reduction pipeline for use in alignment, commissioning, and health-verification of CIAO instrument at Telescope</p>
@@ -101,6 +104,22 @@
       </div>			
 			
 	<!-- /Main -->
+
+	<!-- Footer -->
+		<div id="footer">
+			<div class="container">
+				<section>
+					<header>
+						<h2>Contact</h2>
+						<span class="byline">Please get in touch!</span>
+					</header>
+					<ul class="contact">
+						<li><a href="mailto:cdeen@mpe.mpg.de">cdeen@mpe.mpg.de</a></li>
+					</ul>
+				</section>
+			</div>
+		</div>
+	<!-- /Footer -->
 
 
 	<!-- Copyright -->
