--- a/index.html
+++ b/index.html
@@ -57,9 +57,26 @@
 				</header>
 				<p>I am an infrared astronomer with 11 years of experience measuring, calculating, and controlling the behavior of photons and extracting information about the conditions of their 
 				creation, transit, and detection.  I am currently looking to continue my passion for optics, metrology, and programming.</p>
-				<hr />
+					<img src="images/cdeen.jpg", width="170">
 			</div>
 		</div>
+		
+	<!-- Footer -->
+		<div id="footer">
+			<div class="container">
+				<section>
+					<header>
+						<h2>Contact</h2>
+						<span class="byline">Please get in touch!</span>
+					</header>
+					<ul class="contact">
+						<li><a href="mailto:cdeen@mpe.mpg.de">cdeen@mpe.mpg.de</a></li>
+					</ul>
+				</section>
+			</div>
+		</div>
+	<!-- /Footer -->
+
 
 
 	<!-- Copyright -->
