--- a/techskills.html
+++ b/techskills.html
@@ -54,7 +54,7 @@
 				<section>
 					<header>
 						<h2>Technical Skills</h2>
-						<span class="byline">Broad range of competences</span>
+						<span class="byline">Broad range of competencies</span>
 					</header>
 					<ul>
 					<li><b>Optics</b>
@@ -66,19 +66,10 @@
 						<li>Working knowledge of ZEMAX optical design software</li>
 						</ol>
 					</li>
-					<li><b>Data Science</b>
+					<li><b>Metrology</b>
 						<ol>
-						<li>Proficient in algorithmically sifting through massive quantities of data to search for hidden trends and insights</li>
-						</ol>
-					</li>
-					<li><b>Computer Programming</b>
-						<ol>
-						<li>Proficient in many programming langages (Python, R, IDL, FORTRAN77, MATLAB, C++, MySQL)</li>
-						<li>GUI Programming (Python, IDL, Java)</li>
-						<li>Manipulation of various raw data formats (images, spectra, time series) to extract relevant information</li>
-						<li>Experience developing software under externally defined standards</li>
-						<li>Experience maintaining legacy code (FORTRAN77), adding new functionality (<a href="https://github.com/soylentdeen/MoogStokes">MoogStokes</a>) and
-						 interfacing with Python (<a href="https://github.com/soylentdeen/MoogPy">MoogPy</a>)</li>
+						<li>Experience designing and executing metrological campaigns to verify compliance with design specifications and acceptance criteria</li>
+					   <li>Experience characterizing infrared detectors</li>
 						</ol>
 					</li>
 					<li><b>Systems Engineering</b>
@@ -89,14 +80,20 @@
 						<li>Experience coordinating software development with internal and external software developers</li>
 						</ol>
 					</li>
+					<li><b>Computer Programming</b>
+						<ol>
+						<li>Proficient in many programming langages (Python, R, IDL, FORTRAN77, MATLAB, C++, MySQL)</li>
+						<li>GUI Programming (Python, IDL, Java)</li>
+						<li>Manipulation of various raw data formats (images, spectra, time series) to extract relevant information</li>
+						<li>Experience developing software under externally defined standards</li>
+						<li>Experience maintaining legacy code (FORTRAN77), adding new functionality (<a href="https://github.com/soylentdeen/MoogStokes">MoogStokes</a>) and
+						 interfacing with Python (<a href="https://github.com/soylentdeen/MoogPy">MoogPy</a>)</li>
+						<li>Proficient in algorithmically sifting through massive quantities of data to search for hidden trends and insights</li>
+						</ol>
+					</li>
 					<li><b>Interfacing</b>
 						<ol>
 						<li>Labview, RS232, custom python drivers (<a href="https://github.com/soylentdeen/pyGTA">Python Grating Testing Aparatus</a>)</li>
-						</ol>
-					</li>
-					<li><b>Data Science</b>
-						<ol>
-						<li>Proficient in algorithmically sifting through massive quantities of data</li>
 						</ol>
 					</li>
 
@@ -106,6 +103,21 @@
 			</div>
 		</div>
 	<!-- /Main -->
+	<!-- Footer -->
+		<div id="footer">
+			<div class="container">
+				<section>
+					<header>
+						<h2>Contact</h2>
+						<span class="byline">Please get in touch!</span>
+					</header>
+					<ul class="contact">
+						<li><a href="mailto:cdeen@mpe.mpg.de">cdeen@mpe.mpg.de</a></li>
+					</ul>
+				</section>
+			</div>
+		</div>
+	<!-- /Footer -->
 
 	<!-- Copyright -->
 		<div id="copyright">
