--- a/techskills.html
+++ b/techskills.html
@@ -59,44 +59,43 @@
 					<ul>
 					<li><b>Optics</b>
 						<ol>
-						<li>Ability to align, test, and troubleshoot optical systems using both optical and infrared infrared lasers and continuum sources</li>
-						<li>Deep understanding of polarized Stokes (IQUV) radiative transfer and interplay between light and magnetic fields</li>
-						<li>Extensive experience in the design and metrology of dispersive optics</li>
-						<li>Experience modeling optical systems to simulate commissioning activities and system performance</li>
+						<li>Alignment, test, and troubleshooting of optical systems.</li>
+						<li>Design and fabrication of diffractive optics (grisms, immersion gratings) using silicon lithographic techniques</li>
+						<li>Modeling of optical systems to simulate commissioning activities.</li>
 						<li>Working knowledge of ZEMAX optical design software</li>
+						<li>Deep understanding of polarized Stokes (IQUV) radiative transfer and interplay between light and magnetic fields</li>
 						</ol>
 					</li>
 					<li><b>Metrology</b>
 						<ol>
-						<li>Experience designing and executing metrological campaigns to verify compliance with design specifications and acceptance criteria</li>
-					   <li>Experience characterizing infrared detectors</li>
+						</li>Design and execution of metrological campaigns to verify compliance with design specifications and acceptance criteria</li>
+						<li>Characterization (transmission, AR coating, cryogenic robustness, blaze function, PSF) of diffractive optics (grism, VPH and immersion gratings)</li>
 						</ol>
 					</li>
+					<li><b>Statistical Analysis</b></li>
+						<ol>
+						<li>Markov-Chain Monte Carlo to explore parameter spaces and covariances</li>
+						<li>Principal Component Analysis</li>
+						<li>Comparison of observations against theoretical models</li>
+						</ol>
 					<li><b>Systems Engineering</b>
 						<ol>
-						<li>Experience developing design requirements</li>
-						<li>Experience developing a test suite to check compliance</li>
-						<li>Experience testing system performance to verify compliance</li>
-						<li>Experience coordinating software development with internal and external software developers</li>
+						<li>Development of design requirements</li>
+						<li>Development of test suites to check compliance</li>
+						<li>Tests of system performance to verify compliance</li>
+						<li>Coordination of software development between internal and external software developers</li>
 						</ol>
 					</li>
 					<li><b>Computer Programming</b>
 						<ol>
-						<li>Proficient in many programming langages (Python, R, IDL, FORTRAN77, MATLAB, C++, MySQL)</li>
-						<li>GUI Programming (Python, IDL, Java)</li>
-						<li>Manipulation of various raw data formats (images, spectra, time series) to extract relevant information</li>
-						<li>Experience developing software under externally defined standards</li>
-						<li>Experience maintaining legacy code (FORTRAN77), adding new functionality (<a href="https://github.com/soylentdeen/MoogStokes">MoogStokes</a>) and
-						 interfacing with Python (<a href="https://github.com/soylentdeen/MoogPy">MoogPy</a>)</li>
-						<li>Proficient in algorithmically sifting through massive quantities of data to search for hidden trends and insights</li>
+						<li>Proficieny in many programming langages (Python, FORTRAN77, C++, MATLAB, IDL, R, MySQL)</li>
+						<li>Experience algorithmically sifting through massive quantities (TB) of data</li>
+						<li>Processing of raw data (images, spectra, time series) to extract information</li>
+						<li>Development of software under externally defined standards</li>
+						<li>Maintenance of legacy code (FORTRAN77), adding new functionality (<a href="https://github.com/soylentdeen/MoogStokes">MoogStokes</a>) and interfacing with Python (<a href="https://github.com/soylentdeen/MoogPy">MoogPy</a>)</li>
+						<li>Development of Labview, RS232, custom python drivers (<a href="https://github.com/soylentdeen/pyGTA">pyGTA</a>)</li>
 						</ol>
 					</li>
-					<li><b>Interfacing</b>
-						<ol>
-						<li>Labview, RS232, custom python drivers (<a href="https://github.com/soylentdeen/pyGTA">Python Grating Testing Aparatus</a>)</li>
-						</ol>
-					</li>
-
 					</ul>
 
 				</section>
@@ -126,6 +125,23 @@
 			</div>
 		</div>
 
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=11551721; 
+var sc_invisible=0; 
+var sc_security="3ae7984b"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/11551721/0/3ae7984b/0/" alt="Web
+Analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 
 	</body>
 </html>
