--- a/examples.html
+++ b/examples.html
@@ -127,22 +127,9 @@
 			</div>
 		</div>
 
-<!-- Start of StatCounter Code for Default Guide -->
-<script type="text/javascript">
-var sc_project=11551721; 
-var sc_invisible=0; 
-var sc_security="3ae7984b"; 
-var scJsHost = (("https:" == document.location.protocol) ?
-"https://secure." : "http://www.");
-document.write("<sc"+"ript type='text/javascript' src='" +
-scJsHost+
-"statcounter.com/counter/counter.js'></"+"script>");
-</script>
-<noscript><div class="statcounter"><a title="Web Analytics"
-href="http://statcounter.com/" target="_blank"><img
-class="statcounter"
+<a title="Web Analytics" href="http://statcounter.com/"
+target="_blank"><img
 src="//c.statcounter.com/11551721/0/3ae7984b/0/" alt="Web
-Analytics"></a></div></noscript>
-<!-- End of StatCounter Code for Default Guide -->
+Analytics" ></a>
 	</body>
 </html>
