--- a/experience.html
+++ b/experience.html
@@ -56,18 +56,30 @@
 						<h2>Experience and Education</h2>
 						<span class="byline">Postdoctoral and Professional</span>
 					</header>
-					<p>My 11 year career in the study of the production, control, and analysis of photons has seen me move from Texas to Bayern.  I obtained a bachelors of science degree in Physics at Texas A&M University in College Station, 
+					<p>My 15 year career in the study of the production, control, and analysis of photons has seen me move from Texas to Bayern.  I obtained a bachelors of science degree in Physics at Texas A&M University in College Station, 
 					and a doctorate in Astronomy at the University of Texas at Austin.  After successfully defending my thesis on star formation and silicon diffractive optics, I took a
 					postdoctoral position at the Max Planck Institut für Astronomie in Heidelberg, working on CIAO, a suite of four infrared adaptive optics instruments to be installed on the European Southern
 					Observatory's (ESO) Very Large Telescope (VLT).  After the delivery and installation of the wave front sensors, I moved from MPIA in Heidelberg to the Max Planck Institut für 
-					extraterrestrische Physik in Garching bei München, where I am now the CIAO responsible for the GRAVITY Interferometer.</p>
+					extraterrestrische Physik in Garching bei München, where I ended my tour through Academia as the CIAO responsible for the GRAVITY Interferometer.
+					<br>
+					I left Academia in 2018 for Mynaric Lasercom GmbH, where I am currently the Lead Optical Test Engineer. 
+					</p>
 
 				</section>
 			   <div class="row">
 					<section class="12u">
 						<header>
+							<h2><a href="http://www.mynaric.com/">Mynaric Lasercom GmbH</a></h2>
+							<span class="byline">Lead Optical Test Engineer (April 2018 - Present)</span>
+						</header>
+						<p>Responsible for coordinating, designing, and performing optical tests for terminals and subsystems at various stages of the development and production lifecycle.</p>
+					</section>
+				</div>
+    			        <div class="row">
+					<section class="12u">
+						<header>
 							<h2><a href="http://www.mpe.mpg.de/">MPI für extraterrestrische Physik</a></h2>
-							<span class="byline">Postdoctoral Researcher (Aug 2016 - Present)</span>
+							<span class="byline">Postdoctoral Researcher (Aug 2016 - April 2018)</span>
 						</header>
 						<p>Adaptive Optics (AO) specialist.  Responsible for ensuring Adaptive Optics performance during operation with GRAVITY Interferometer, and diagnosing/solving performance problems.  Embedded Strehl ratio measurement routine in GRAVITY reduction pipeline.</p>
 					</section>
