--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 				<header>
 					<h2>Profile</h2>
 				</header>
-				<p>I am an infrared astronomer with 11 years of experience measuring, calculating, and controlling the behavior of photons and extracting information about the conditions of their 
-				creation, transit, and detection.  I am currently looking to continue my passion for optics, metrology, and programming.</p>
+				<p>I am an infrared optical engineer with 15 years of experience measuring, calculating, and controlling the behavior of photons and extracting information about the conditions of their 
+				creation, transit, and detection. I am passionate about the estuary of optics, metrology, and programming.</p>
 					<img src="images/cdeen.jpg", width="170">
 			</div>
 		</div>
@@ -69,7 +69,7 @@
 						<span class="byline">Please get in touch!</span>
 					</header>
 					<ul class="contact">
-						<li><a href="mailto:cdeen@mpe.mpg.de">cdeen@mpe.mpg.de</a></li>
+						<li><a href="mailto:soylentdeen@proton.me">soylentdeen@proton.me</a></li>
 					</ul>
 				</section>
 			</div>
