--- a/experience.html
+++ b/experience.html
@@ -62,7 +62,7 @@
 					Observatory's (ESO) Very Large Telescope (VLT).  After the delivery and installation of the wave front sensors, I moved from MPIA in Heidelberg to the Max Planck Institut für 
 					extraterrestrische Physik in Garching bei München, where I ended my tour through Academia as the CIAO responsible for the GRAVITY Interferometer.
 					<br>
-					I left Academia in 2018 for Mynaric Lasercom GmbH, where I am currently the Lead Optical Test Engineer. 
+					I left Academia in 2018 for Mynaric Lasercom GmbH, where I am currently the Lead Optical Test Engineer for our suite of airborne and satellite laser communication terminals. 
 					</p>
 
 				</section>
@@ -72,7 +72,7 @@
 							<h2><a href="http://www.mynaric.com/">Mynaric Lasercom GmbH</a></h2>
 							<span class="byline">Lead Optical Test Engineer (April 2018 - Present)</span>
 						</header>
-						<p>Responsible for coordinating, designing, and performing optical tests for terminals and subsystems at various stages of the development and production lifecycle.</p>
+						<p>Responsible for coordinating the work of the Optical Testing group, including designing, preparing, and performing optical tests for terminals and subsystems at various stages of the development and production lifecycle for both internal and external customers.</p>
 					</section>
 				</div>
     			        <div class="row">
