--- a/techskills.html
+++ b/techskills.html
@@ -68,8 +68,15 @@
 					</li>
 					<li><b>Metrology</b>
 						<ol>
-						</li>Design and execution of metrological campaigns to verify compliance with design specifications and acceptance criteria</li>
+						<li>Design and execution of metrological campaigns to verify compliance with design specifications and acceptance criteria</li>
 						<li>Characterization (transmission, AR coating, cryogenic robustness, blaze function, PSF) of diffractive optics (grism, VPH and immersion gratings)</li>
+						</ol>
+					</li>
+					<li><b>Education</b>
+						<ol>
+						<li>Free-lance undergraduate physics and math tutor</li>
+						<li>Development and presentation of lecture materials for a <a href = "http://python4mpia.github.io/index.html">python for astronomers</a> course at MPIA</li>
+						<li>Development and presentation of lecture materials for yearly company-wide laser saftey briefings in official capacity as laser safety officer</li>
 						</ol>
 					</li>
 					<li><b>Statistical Analysis</b></li>
@@ -111,7 +118,7 @@
 						<span class="byline">Please get in touch!</span>
 					</header>
 					<ul class="contact">
-						<li><a href="mailto:cdeen@mpe.mpg.de">cdeen@mpe.mpg.de</a></li>
+						<li><a href="mailto:soylentdeen@proton.me">soylentdeen@proton.me</a></li>
 					</ul>
 				</section>
 			</div>
