--- a/references.html
+++ b/references.html
@@ -72,7 +72,7 @@
 						<span class="byline">Please get in touch!</span>
 					</header>
 					<ul class="contact">
-						<li><a href="mailto:cdeen@mpe.mpg.de">cdeen@mpe.mpg.de</a></li>
+						<li><a href="mailto:soylentdeen@proton.me">soylentdeen@proton.me</a></li>
 					</ul>
 				</section>
 			</div>
